force-app/main/default/objects/Case/fields/Copado_Session_2__c.field-meta.xml
<CustomField>
    <fullName>Copado_Session_2__c</fullName>
    <label>Copado Session 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>