force-app/main/default/objects/Case/fields/FSM_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FSM_BusinessUnit__c</fullName>
    <description>Business Unit for Case</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>