force-app/main/default/objects/Case/fields/FSM_CaseManaged__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part SFS-5307</description>
    <label>Case Managed</label>
    <type>Checkbox</type>
</CustomField>