force-app/main/default/objects/Case/fields/FSM_ContactName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ContactName__c</fullName>
    <label>Contact Name</label>
    <length>174</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>