force-app/main/default/objects/Case/fields/FSM_CustomerAtRiskofDissatisfaction__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAtRiskofDissatisfaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true when certain criteria are met for WOs under the case

Updated as a part of SFS-5426</description>
    <label>Customer At Risk of Dissatisfaction</label>
    <type>Checkbox</type>
</CustomField>