force-app/main/default/objects/Case/fields/FSM_DMADM__c.field-meta.xml
<CustomField>
    <fullName>FSM_DMADM__c</fullName>
    <description>SFI-20/SFI-104</description>
    <label>DMA / DAS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>