force-app/main/default/objects/Case/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>SAP Work Order</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>