force-app/main/default/objects/Case/fields/FSM_IsBundle__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-2314, This will be checked if any SA related to this Case is a Bundle SA</description>
    <label>Is Bundle</label>
    <type>Checkbox</type>
</CustomField>