force-app/main/default/objects/Case/fields/FSM_isMST__c.field-meta.xml
<CustomField>
    <fullName>FSM_isMST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMST</label>
    <type>Checkbox</type>
</CustomField>