force-app/main/default/objects/Case/fields/FSM_MissedAppointment__c.field-meta.xml
<CustomField>
    <fullName>FSM_MissedAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created as part of SFS-5307</description>
    <label>Missed Appointment</label>
    <type>Checkbox</type>
</CustomField>