force-app/main/default/objects/Case/fields/FSM_MultipleAttemptedVisits__c.field-meta.xml
<CustomField>
    <fullName>FSM_MultipleAttemptedVisits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-5307</description>
    <label>Multiple Attempted Visits</label>
    <type>Checkbox</type>
</CustomField>