force-app/main/default/objects/Case/fields/FSM_NotificationAge__c.field-meta.xml
<CustomField>
    <fullName>FSM_NotificationAge__c</fullName>
    <description>update as part of SFS-7996</description>
    <formula>IF(ISPICKVAL(Status , &apos;Closed&apos;),
DATEVALUE(ClosedDate) - DATEVALUE( FSM_OpenDate__c ),
TODAY() - DATEVALUE(FSM_OpenDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>