force-app/main/default/objects/Case/fields/FSM_NotificationCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_NotificationCode__c</fullName>
    <label>Notification Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>