force-app/main/default/objects/Case/fields/FSM_OpenDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_OpenDate__c</fullName>
    <description>Date When the Notification has been raised.
Updated label as part of SFS-8118</description>
    <label>Notification Created Date</label>
    <type>DateTime</type>
</CustomField>