force-app/main/default/objects/Case/fields/FSM_ShiftType__c.field-meta.xml
<CustomField>
    <fullName>FSM_ShiftType__c</fullName>
    <description>Created as a part of SFS-4427</description>
    <label>Shift Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>