force-app/main/default/objects/Case/fields/FSM_SpecialCondition__c.field-meta.xml
<CustomField>
    <fullName>FSM_SpecialCondition__c</fullName>
    <label>Special Condition</label>
    <length>174</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>