force-app/main/default/objects/Case/fields/FSM_TMAPermit__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAPermit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-1561</description>
    <label>TMA Permit</label>
    <referenceTo>FSM_TMAPermit__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>