force-app/main/default/objects/Case/fields/FSM_VulnerableCustomer__c.field-meta.xml
<CustomField>
    <fullName>FSM_VulnerableCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true when the Case Description has “THIS SUPERCEDES ANY SPECIAL CONDITIONS NOTED IN THE PREVIOUS ATTACHMENTS.”“

Updated as a part of SFS-5426</description>
    <label>Vulnerable Customer?</label>
    <type>Checkbox</type>
</CustomField>